- Fixed tab order in ABC settings menu
- Escape key exits full screen mode

1.3.8.7
- Removed pyparsing.py (use 'pip install pyparsing' or 'sudo apt install python3-pyparsing' to fix pyparsing errors)
- Added message that Python 2 is no longer supported
- Removed shortcut (ctrl-D) for DoReMi-mode since it is too easy to accidentally switch it on
- Fixed: Some users could not export a PDF because the ghostscript path was a byte string instead of a unicode string. Now the path is coverted to unicode.
- Fixed: Printing caused a black page.
- Fixed: Render issue with Python 3.10 (cast to int was needed, thanks robertmuth) https://github.com/jwdj/EasyABC/issues/53
- Fixed: Removed loading of NONEXISTANT_FILE for all players except wxmediaplayer
- Added 'Insert musical symbol' again to the menu again which was removed in 1.3.8.4. Although ABC Assist can insert musical with less hassle, some users really like the old
  menu version. For Linux (Gnome) users these menus are still empty but that is caused by Gnome, not EasyABC.
- Fixed: Playing selection gave an error: AttributeError: 'bytes' object has no attribute 'encode'  (https://github.com/jwdj/EasyABC/issues/69)
- Fixed: Now automatic insertion of bars (|) only when no text is selected
- Fixed: FluidSynth issues on 64 bit Mac (thanks Mark)
- Fixed: No bars added within chords or comment

1.3.8.x
- New: Export to MP3
- New: Export to AAC
- New: file setting: ffmpeg
- Several fixes to support newer Python versions. (thanks aupfred and all that contributed)
- Updated xml2abc, abc2xml (aupfred)
- Reenable note highlighting based on cursor position in editor (aupfred)
- Adapt to new version of abcmidi output (aupfred)
- Fix playback of a selection on second page (aupfred)
- Enable Midi playback for Mac based on Apple DLS Synthetiser thanks to mplay library (aupfred)
- Fix Musicscore gets blank when clicking on the musicpanel (aupfred)
- Updated about page and abc reference (aupfred)